# check-_flask

./: .replit  ChequeManagement.spec  GUIDE_BUILD_EXE.md  GestionCheques.spec  app.py  build.spec  build_exe.py  cheque_app.spec  cheques_app.spec  desktop_main.py  desktop_main.spec  exe_main.py  forms.py  index.html  installation_guide.md  main.py  main.spec  models.py  pip_requirements.txt  pyproject.toml  replit.md  requirements_exe.txt  scheduler.py  setup_cx_freeze.py  simple_build.py
attached_assets/: Pasted--1-Advanced-Analytics-Reporting-Cheque-aging-analysis-days-in-each-status-Seasonal-trends-f-1753700959013_1753700959014.txt  Pasted--need-to-optimize-the-automatic-Excel-synchronization-feature-for-my-Cheque-Management-Application-w-1754042909597_1754042909597.txt  Pasted--need-to-optimize-the-automatic-Excel-synchronization-feature-for-my-Cheque-Management-Application-w-1754057558013_1754057558013.txt  Pasted-Cheque-aging-analysis-days-in-each-status-Seasonal-trends-for-cheque-inflow-outflow-Risk-a-1753781418676_1753781418698.txt  Pasted-Manages-per-year-Excel-workbooks-each-with-12-monthly-sheets-Initialization-Takes-a-directory-c-1753696968586_1753696968586.txt  Pasted-with-technologie-python-1-MODULES-PRINCIPAUX-D-VELOPPER-A-Param-tres-Onglet-Settings--1753695287185_1753695287187.txt
data/: cheques.db
routes/: advanced_analytics.py  analytics.py  auth.py  banks.py  build.py  cheques.py  clients.py  dashboard.py  excel_manager.py  exports.py
templates/: base.html
uploads/: .gitkeep
utils/: advanced_analytics.py  analytics_engine.py  excel_manager.py  (+9 more)
(+21 files in other folders)
