[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "reportlab>=4.4.3",
    "apscheduler>=3.11.0",
    "sendgrid>=6.12.4",
    "flask-migrate>=4.1.0",
    "flask-caching>=2.3.1",
    "plotly>=6.2.0",
    "cryptography>=45.0.5",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "dash>=3.1.1",
    "flask-limiter>=3.12",
    "boto3>=1.39.15",
    "redis>=6.2.0",
    "twilio>=9.7.0",
    "pillow>=11.3.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "celery>=5.5.3",
    "scikit-learn>=1.7.1",
    "phonenumbers>=9.0.10",
]
